--- a/dashboard.html
+++ b/dashboard.html
@@ -1,26 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dashboard | Essien's Excellence Academy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Student Dashboard | Essien's Excellence Academy</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    body { padding: 2rem; font-family: sans-serif; }
-    .card { background: rgba(255,255,255,0.08); padding: 1.5rem; border-radius: 16px; margin-bottom: 1rem; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #141E30, #243B55);
+      color: #fff;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    nav.glass-nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(15px);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
+    .glass-nav .logo {
+      font-size: 1.3rem;
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
+    .glass-nav .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 1rem;
+    }
+    .glass-nav .nav-links a {
+      text-decoration: none;
+      color: #fff;
+      padding: 0.4rem 0.8rem;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+    .glass-nav .nav-links a:hover {
+      background: rgba(255, 255, 255, 0.2);
+    }
+
+    .container {
+      flex: 1;
+      max-width: 1100px;
+      margin: 2rem auto;
+      padding: 2rem;
+      border-radius: 20px;
+      background: rgba(255, 255, 255, 0.08);
+      backdrop-filter: blur(20px);
+      text-align: center;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.3);
+    }
+
+    h1 {
+      margin-bottom: 2rem;
+      font-size: 2.2rem;
+      font-weight: bold;
+      color: #f1f1f1;
+    }
+
+    .profile-card {
+      margin-bottom: 2rem;
+      padding: 1.5rem;
+      border-radius: 16px;
+      background: rgba(255, 255, 255, 0.06);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      text-align: left;
+    }
+    .profile-card h2 {
+      margin-bottom: 0.5rem;
+      font-size: 1.6rem;
+    }
+    .profile-card p {
+      margin: 0.25rem 0;
+    }
+
+    .grid {
+      display: grid;
+      gap: 1.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      margin-top: 2rem;
+    }
+
+    .card {
+      padding: 1.5rem;
+      border-radius: 16px;
+      background: rgba(255, 255, 255, 0.06);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      text-align: left;
+      transition: transform 0.3s, background 0.3s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      background: rgba(255, 255, 255, 0.12);
+    }
+    .card h3 {
+      margin-bottom: 0.5rem;
+    }
+    .card p {
+      opacity: 0.9;
+    }
+
+    .btn {
+      margin-top: 1.5rem;
+      padding: 0.8rem 1.4rem;
+      border-radius: 999px;
+      background: linear-gradient(90deg, #ff9966, #ff5e62);
+      color: #fff;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+    .btn:hover {
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body>
-  <h1 id="welcome"></h1>
-  <div class="card">📚 Course Materials</div>
-  <div class="card">📊 Grades & Analytics</div>
-  <div class="card">📅 Assignments & Deadlines</div>
-  <div class="card">⚙️ Settings</div>
 
+  <nav class="glass-nav">
+    <div class="logo">Essien's Excellence Academy</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="academics.html">Academics</a></li>
+      <li><a href="admissions.html">Admissions</a></li>
+      <li><a href="students.html">Students</a></li>
+      <li><a href="parents.html">Parents</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <div class="container">
+      <h1>🎓 Student Dashboard</h1>
+      <div id="profile" class="profile-card">
+        <h2>Loading...</h2>
+      </div>
+
+      <div class="grid">
+        <div class="card">
+          <h3>📚 Assignments</h3>
+          <p>Track your assignments and upcoming deadlines.</p>
+        </div>
+        <div class="card">
+          <h3>📊 Grades</h3>
+          <p>Check your performance and progress reports.</p>
+        </div>
+        <div class="card">
+          <h3>📅 Calendar</h3>
+          <p>View important school events and schedules.</p>
+        </div>
+        <div class="card">
+          <h3>⚙️ Settings</h3>
+          <p>Update your personal information and preferences.</p>
+        </div>
+      </div>
+
+      <button id="logout" class="btn">Log Out</button>
+    </div>
+  </main>
+
+  <!-- Supabase client -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
-    const profile = JSON.parse(localStorage.getItem("studentProfile") || "{}");
-    document.getElementById("welcome").textContent =
-      `Welcome, ${profile.name || "Student"} (${profile.studentClass || ""}) 👋`;
+    const supabaseUrl = "https://YOUR_PROJECT_URL.supabase.co";
+    const supabaseAnonKey = "YOUR_ANON_KEY";
+    const supabase = supabase.createClient(supabaseUrl, supabaseAnonKey);
+
+    async function loadProfile() {
+      const { data: { user }, error } = await supabase.auth.getUser();
+      if (error || !user) {
+        alert("You are not logged in.");
+        window.location.href = "students.html";
+        return;
+      }
+
+      const { data, error: profileError } = await supabase
+        .from("students")
+        .select("*")
+        .eq("user_id", user.id)
+        .single();
+
+      const profileDiv = document.getElementById("profile");
+
+      if (profileError || !data) {
+        profileDiv.innerHTML = "<h2>No profile found</h2><p>Please complete your profile setup.</p>";
+        return;
+      }
+
+      profileDiv.innerHTML = `
+        <h2>${data.first_name} ${data.last_name}</h2>
+        <p><strong>Gender:</strong> ${data.gender}</p>
+        <p><strong>Class:</strong> ${data.class}</p>
+        <p><strong>Email:</strong> ${user.email}</p>
+      `;
+    }
+
+    document.getElementById("logout").addEventListener("click", async () => {
+      await supabase.auth.signOut();
+      window.location.href = "students.html";
+    });
+
+    loadProfile();
   </script>
 </body>
 </html>
