--- a/students.html
+++ b/students.html
@@ -270,8 +270,8 @@
     const DEMO_PASSPHRASE = "demo";
 
     // 🔑 Replace with your Supabase project details
-    const supabaseUrl = "https://YOUR_PROJECT_URL.supabase.co";
-    const supabaseAnonKey = "YOUR_ANON_KEY";
+    const supabaseUrl = "https://lqpxjyjzvabtpfdxxpjo.supabase.co";
+    const supabaseAnonKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxxcHhqeWp6dmFidHBmZHh4cGpvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY1ODgxMDMsImV4cCI6MjA3MjE2NDEwM30.LZ5HWNh_smPcBg7cDKj3SPvs-0uPewLfXkjoNHNIGYE";
     const supabase = supabase.createClient(supabaseUrl, supabaseAnonKey);
 
     const verificationForm = document.getElementById('verificationForm');
