--- a/students.html
+++ b/students.html
@@ -2,374 +2,215 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Students | Essien's Excellence Academy</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Student Portal | Essien's Excellence Academy</title>
   <style>
-    /* General resets */
+    /* Reset + layout */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: "Segoe UI", sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      background: linear-gradient(135deg, #001f3f, #0074D9);
       color: #fff;
-    }
-
-    h1, h2, p {
-      text-align: center;
-    }
-
-    .muted {
-      opacity: 0.85;
-      font-size: 0.95rem;
-      text-align: center;
-    }
-
-    /* Navigation */
-    .glass-nav {
-      backdrop-filter: blur(12px);
-      background: rgba(255, 255, 255, 0.06);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      min-height: 100vh;
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      padding: 1rem 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 50;
-    }
-    .glass-nav .logo {
-      font-weight: bold;
-      font-size: 1.2rem;
-      color: #fff;
-    }
-    .nav-links {
-      display: flex;
-      gap: 1rem;
-      list-style: none;
-    }
-    .nav-links a {
-      text-decoration: none;
-      color: #fff;
-      padding: 0.4rem 0.8rem;
-      border-radius: 8px;
-      transition: 0.3s;
-    }
-    .nav-links a.active,
-    .nav-links a:hover {
-      background: rgba(255, 255, 255, 0.15);
-    }
-
-    /* Steps container */
-    .steps-wrap {
-      display: grid;
-      gap: 2rem;
-      max-width: 900px;
-      margin: 2rem auto;
+      justify-content: center;
       padding: 1rem;
     }
 
-    .step-card {
+    .container {
+      width: 100%;
+      max-width: 450px;
+    }
+
+    /* Glassmorphism card */
+    .card {
+      background: rgba(255, 255, 255, 0.1);
       border-radius: 20px;
       padding: 2rem;
-      background: rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(16px);
-      box-shadow: 0 8px 32px rgba(0,0,0,0.25);
-      border: 1px solid rgba(255, 255, 255, 0.15);
-      transition: transform 0.3s ease;
-    }
-    .step-card:hover {
-      transform: translateY(-4px);
+      box-shadow: 0 8px 32px rgba(0,0,0,0.2);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      text-align: center;
+      animation: fadeIn 0.6s ease-in-out;
     }
 
-    /* Form styling */
-    .form-grid {
-      display: grid;
+    .card h2 {
+      margin-bottom: 1rem;
+      font-size: 1.6rem;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
       gap: 1rem;
-      max-width: 500px;
-      margin: 0 auto;
     }
-    .input, select {
-      padding: 0.9rem 1rem;
-      border-radius: 12px;
-      border: 1px solid rgba(255,255,255,0.15);
-      background: rgba(255,255,255,0.08);
-      color: #fff;
-      outline: none;
-      width: 100%;
-    }
-    .input::placeholder { color: #cfcfcf; }
 
-    .cta-button {
-      padding: 0.9rem 1.2rem;
+    input {
+      padding: 0.8rem;
       border: none;
-      border-radius: 12px;
-      background: linear-gradient(135deg, #ff9a00, #ffb347);
-      color: #000;
-      font-weight: bold;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .cta-button:hover {
-      background: linear-gradient(135deg, #ffb347, #ffcc70);
+      border-radius: 10px;
+      font-size: 1rem;
     }
 
-    .help {
-      font-size: 0.85rem;
-      opacity: 0.8;
-      margin-top: -0.3rem;
+    button {
+      padding: 0.9rem;
+      border: none;
+      border-radius: 10px;
+      background: linear-gradient(135deg, #0074D9, #39CCCC);
+      color: white;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+
+    button:hover {
+      opacity: 0.9;
+      transform: scale(1.02);
     }
 
     .error {
-      margin-top: 0.75rem;
-      background: rgba(255, 69, 58, 0.15);
-      border: 1px solid rgba(255, 69, 58, 0.35);
-      color: #ffb3ad;
-      padding: 0.75rem 1rem;
-      border-radius: 12px;
+      color: #ff6b6b;
+      margin-top: 0.5rem;
       display: none;
     }
 
-    /* Tabs */
-    .tabs {
-      display: flex;
-      gap: 0.5rem;
-      margin-bottom: 1rem;
-      justify-content: center;
-    }
-    .tab-btn {
-      background: rgba(255,255,255,0.1);
-      border: 1px solid rgba(255,255,255,0.2);
-      border-radius: 999px;
-      padding: 0.5rem 1.2rem;
-      cursor: pointer;
-      color: #fff;
-      transition: 0.3s;
-    }
-    .tab-btn.active {
-      background: orange;
-      color: #000;
-      font-weight: bold;
-    }
-    .tab-panel { display: none; }
-    .tab-panel.active { display: block; }
+    .hidden { display: none; }
 
-    .hidden { display: none !important; }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
-
-  <!-- Navbar -->
-  <nav class="glass-nav">
-    <div class="logo">Essien's Excellence Academy</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="academics.html">Academics</a></li>
-      <li><a href="admissions.html">Admissions</a></li>
-      <li><a href="students.html" class="active">Students</a></li>
-      <li><a href="parents.html">Parents</a></li>
-    </ul>
-  </nav>
-
-  <!-- Page -->
-  <main class="page-section">
-    <h1>Student Life & Portal</h1>
-    <p class="muted">Access learning tools, track progress, and stay connected with your school community.</p>
-
-    <div class="steps-wrap">
-
-      <!-- Step 1 -->
-      <section id="step1" class="step-card">
-        <h2>Student Portal</h2>
-        <ul>
-          <li>📚 Download Course Materials</li>
-          <li>📊 View Grades</li>
-          <li>📅 Submit Assignments</li>
-        </ul>
-      </section>
-
-      <!-- Step 2 -->
-      <section id="step2" class="step-card">
-        <h2>Verify Your Student Status</h2>
-        <form id="verificationForm" class="form-grid" novalidate>
-          <label><strong>School Email</strong></label>
-          <input class="input" type="email" id="school-email" placeholder="first.last@essienacademy.edu.ng" required />
-          <label><strong>Secret Passphrase</strong></label>
-          <input class="input" type="text" id="passphrase" placeholder="Enter passphrase" required />
-          <div class="help">Hint: Mountain + founding year.</div>
-          <button type="submit" class="cta-button">Verify & Continue</button>
-          <div id="verifyError" class="error"></div>
-        </form>
-      </section>
-
-      <!-- Step 3 -->
-      <section id="step3" class="step-card hidden">
-        <h2>Access Your Account</h2>
-        <div class="tabs">
-          <button class="tab-btn active" data-tab="signup">Sign Up</button>
-          <button class="tab-btn" data-tab="login">Log In</button>
-        </div>
-        <div id="signup" class="tab-panel active">
-          <form id="signupForm" class="form-grid">
-            <label>Email</label>
-            <input class="input" type="email" id="signup-email" required />
-            <label>Create Password</label>
-            <input class="input" type="password" id="password" required />
-            <label>Confirm Password</label>
-            <input class="input" type="password" id="password-confirm" required />
-            <button type="submit" class="cta-button">Create Account</button>
-          </form>
-        </div>
-        <div id="login" class="tab-panel">
-          <form id="loginForm" class="form-grid">
-            <label>Email</label>
-            <input class="input" type="email" id="login-email" required />
-            <label>Password</label>
-            <input class="input" type="password" id="login-password" required />
-            <button type="submit" class="cta-button">Log In</button>
-          </form>
-        </div>
-      </section>
-
-      <!-- Step 4 -->
-      <section id="step4" class="step-card hidden">
-        <h2>Customize Your Profile</h2>
-        <form id="customForm" class="form-grid">
-          <label>Full Name</label>
-          <input class="input" type="text" id="fullName" required />
-
-          <label>Gender</label>
-          <select id="gender" class="input" required>
-            <option value="">--Select--</option>
-            <option>Male</option>
-            <option>Female</option>
-          </select>
-
-          <label>Class</label>
-          <select id="studentClass" class="input" required>
-            <option value="">--Select--</option>
-            <option>Basic 7</option>
-            <option>Basic 8</option>
-            <option>Basic 9</option>
-            <option>JHS 1</option>
-            <option>JHS 2</option>
-            <option>JHS 3</option>
-          </select>
-
-          <button type="submit" class="cta-button">Save & Go to Dashboard</button>
-        </form>
-      </section>
-
+  <div class="container">
+    <!-- Step 2: Verification -->
+    <div class="card" id="step2">
+      <h2>Verify Your Student Status</h2>
+      <form id="verification-form">
+        <input type="email" id="school-email" placeholder="Enter your email" required />
+        <input type="password" id="passphrase" placeholder="Enter Passphrase" required />
+        <button type="submit">Verify</button>
+      </form>
+      <p class="error" id="verify-error"></p>
     </div>
-  </main>
 
-  <!-- Supabase client -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script>
-    const STUDENT_EMAIL_DOMAIN = "@essienacademy.edu.ng";
-    const DEMO_PASSPHRASE = "demo";
+    <!-- Step 3: Signup/Login -->
+    <div class="card hidden" id="step3">
+      <h2>Signup / Login</h2>
+      <form id="signup-form">
+        <input type="text" id="signup-first" placeholder="First Name" required />
+        <input type="text" id="signup-last" placeholder="Last Name" required />
+        <input type="email" id="signup-email" placeholder="Email" required />
+        <input type="password" id="signup-password" placeholder="Password" required />
+        <button type="submit">Create Account</button>
+      </form>
+      <hr style="margin: 1.5rem 0; border: none; border-top: 1px solid rgba(255,255,255,0.2);" />
+      <form id="login-form">
+        <input type="email" id="login-email" placeholder="Email" required />
+        <input type="password" id="login-password" placeholder="Password" required />
+        <button type="submit">Login</button>
+      </form>
+    </div>
+  </div>
 
-    // 🔑 Replace with your Supabase project details
-    const supabaseUrl = "https://lqpxjyjzvabtpfdxxpjo.supabase.co";
-    const supabaseAnonKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxxcHhqeWp6dmFidHBmZHh4cGpvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY1ODgxMDMsImV4cCI6MjA3MjE2NDEwM30.LZ5HWNh_smPcBg7cDKj3SPvs-0uPewLfXkjoNHNIGYE";
-    const supabase = supabase.createClient(supabaseUrl, supabaseAnonKey);
+  <script type="module">
+    import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-    const verificationForm = document.getElementById('verificationForm');
-    const verifyError = document.getElementById('verifyError');
-    const step2 = document.getElementById('step2');
-    const step3 = document.getElementById('step3');
-    const step4 = document.getElementById('step4');
+    const supabase = createClient("https://lqpxjyjzvabtpfdxxpjo.supabase.co", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxxcHhqeWp6dmFidHBmZHh4cGpvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY1ODgxMDMsImV4cCI6MjA3MjE2NDEwM30.LZ5HWNh_smPcBg7cDKj3SPvs-0uPewLfXkjoNHNIGYE");
+
+    // Step elements
+    const step2 = document.getElementById("step2");
+    const step3 = document.getElementById("step3");
+    const verificationForm = document.getElementById("verification-form");
+    const verifyError = document.getElementById("verify-error");
+
+    // Fetch passphrase from Supabase
+    async function getPassphrase() {
+      const { data, error } = await supabase
+        .from("settings")
+        .select("value")
+        .eq("key", "student_passphrase")
+        .single();
+
+      if (error) {
+        console.error("Failed to fetch passphrase:", error);
+        return null;
+      }
+      return data.value;
+    }
 
     // Verification step
-    verificationForm.addEventListener('submit', (e) => {
+    verificationForm.addEventListener("submit", async (e) => {
       e.preventDefault();
-      const email = document.getElementById('school-email').value.toLowerCase();
-      const pass = document.getElementById('passphrase').value.trim();
-      const validDomain = email.endsWith(STUDENT_EMAIL_DOMAIN);
-      const passOk = pass === DEMO_PASSPHRASE;
-      if (!validDomain || !passOk) {
-        verifyError.textContent = "Invalid email or passphrase.";
+      const email = document.getElementById("school-email").value.toLowerCase().trim();
+      const pass = document.getElementById("passphrase").value.trim();
+
+      const validPassphrase = await getPassphrase();
+      if (!validPassphrase) {
+        verifyError.textContent = "⚠️ Could not load passphrase. Try again later.";
         verifyError.style.display = "block";
         return;
       }
-      step2.classList.add('hidden');
-      step3.classList.remove('hidden');
-      document.getElementById('signup-email').value = email;
-      document.getElementById('login-email').value = email;
+
+      if (pass !== validPassphrase) {
+        verifyError.textContent = "❌ Incorrect passphrase. Try again.";
+        verifyError.style.display = "block";
+        return;
+      }
+
+      // Success → show signup/login
+      verifyError.style.display = "none";
+      step2.classList.add("hidden");
+      step3.classList.remove("hidden");
+
+      // Auto-fill email
+      document.getElementById("signup-email").value = email;
+      document.getElementById("login-email").value = email;
     });
 
-    // Tabs
-    document.querySelectorAll('.tab-btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
-        btn.classList.add('active');
-        document.querySelectorAll('.tab-panel').forEach(p => p.classList.remove('active'));
-        document.getElementById(btn.dataset.tab).classList.add('active');
-      });
-    });
-
-    // Sign up
-    document.getElementById('signupForm').addEventListener('submit', async (e) => {
+    // Signup form
+    document.getElementById("signup-form").addEventListener("submit", async (e) => {
       e.preventDefault();
-      const email = document.getElementById('signup-email').value;
-      const pw = document.getElementById('password').value;
-      const pw2 = document.getElementById('password-confirm').value;
-      if (pw !== pw2) return alert("Passwords do not match.");
+      const first = document.getElementById("signup-first").value.trim();
+      const last = document.getElementById("signup-last").value.trim();
+      const email = document.getElementById("signup-email").value.trim();
+      const password = document.getElementById("signup-password").value.trim();
 
-      const { error } = await supabase.auth.signUp({ email, password: pw });
-      if (error) return alert("Error signing up: " + error.message);
-
-      step3.classList.add('hidden');
-      step4.classList.remove('hidden');
-    });
-
-    // Login
-    document.getElementById('loginForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const email = document.getElementById('login-email').value;
-      const pw = document.getElementById('login-password').value;
-
-      const { error } = await supabase.auth.signInWithPassword({ email, password: pw });
-      if (error) return alert("Login failed: " + error.message);
-
-      step3.classList.add('hidden');
-      step4.classList.remove('hidden');
-    });
-
-    // Save Profile
-    async function saveProfile({ firstName, lastName, gender, studentClass }) {
-      const { data: { user } } = await supabase.auth.getUser();
-      if (!user) return alert("Not logged in!");
-
-      const { error } = await supabase.from("students").insert([
-        { user_id: user.id, first_name: firstName, last_name: lastName, gender, class: studentClass }
-      ]);
-
+      const { data, error } = await supabase.auth.signUp({ email, password });
       if (error) {
-        console.error(error);
-        alert("Failed to save profile ❌");
+        alert("Signup failed: " + error.message);
+        return;
+      }
+
+      // Save extra profile
+      const { error: profileError } = await supabase.from("students").insert([{
+        user_id: data.user.id,
+        first_name: first,
+        last_name: last
+      }]);
+
+      if (profileError) {
+        alert("Failed to save profile: " + profileError.message);
       } else {
-        alert("Profile saved successfully ✅");
+        alert("Account created ✅");
         window.location.href = "dashboard.html";
       }
-    }
+    });
 
-    // Customization form
-    document.getElementById('customForm').addEventListener('submit', async (e) => {
+    // Login form
+    document.getElementById("login-form").addEventListener("submit", async (e) => {
       e.preventDefault();
-      const fullName = document.getElementById('fullName').value;
-      const gender = document.getElementById('gender').value;
-      const studentClass = document.getElementById('studentClass').value;
+      const email = document.getElementById("login-email").value.trim();
+      const password = document.getElementById("login-password").value.trim();
 
-      const [firstName, ...rest] = fullName.trim().split(" ");
-      const lastName = rest.join(" ");
-
-      try {
-        await saveProfile({ firstName, lastName, gender, studentClass });
-      } catch (err) {
-        console.error("Error saving profile:", err);
-        alert("Failed to save profile ❌");
+      const { error } = await supabase.auth.signInWithPassword({ email, password });
+      if (error) {
+        alert("Login failed: " + error.message);
+        return;
       }
+      window.location.href = "dashboard.html";
     });
   </script>
 </body>
