--- a/students.html
+++ b/students.html
@@ -6,120 +6,33 @@
   <title>Students | Essien's Excellence Academy</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* General resets */
-    body {
-      font-family: "Segoe UI", sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: #fff;
-    }
-
-    h1, h2, p {
-      text-align: center;
-    }
-
-    .muted {
-      opacity: 0.85;
-      font-size: 0.95rem;
-      text-align: center;
-    }
-
-    /* Navigation */
-    .glass-nav {
-      backdrop-filter: blur(12px);
-      background: rgba(255, 255, 255, 0.06);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 50;
-    }
-    .glass-nav .logo {
-      font-weight: bold;
-      font-size: 1.2rem;
-      color: #fff;
-    }
-    .nav-links {
-      display: flex;
-      gap: 1rem;
-      list-style: none;
-    }
-    .nav-links a {
-      text-decoration: none;
-      color: #fff;
-      padding: 0.4rem 0.8rem;
-      border-radius: 8px;
-      transition: 0.3s;
-    }
-    .nav-links a.active,
-    .nav-links a:hover {
-      background: rgba(255, 255, 255, 0.15);
-    }
-
-    /* Steps container */
+    .hidden { display: none !important; }
     .steps-wrap {
       display: grid;
       gap: 2rem;
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 1rem;
+      max-width: 1000px;
+      margin: 0 auto;
     }
-
     .step-card {
       border-radius: 20px;
       padding: 2rem;
-      background: rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(16px);
-      box-shadow: 0 8px 32px rgba(0,0,0,0.25);
-      border: 1px solid rgba(255, 255, 255, 0.15);
-      transition: transform 0.3s ease;
     }
-    .step-card:hover {
-      transform: translateY(-4px);
-    }
-
-    /* Form styling */
     .form-grid {
       display: grid;
       gap: 1rem;
-      max-width: 500px;
-      margin: 0 auto;
+      max-width: 520px;
+      margin: 0 auto; /* center align */
     }
     .input, select {
       padding: 0.9rem 1rem;
       border-radius: 12px;
       border: 1px solid rgba(255,255,255,0.15);
-      background: rgba(255,255,255,0.08);
+      background: rgba(255,255,255,0.06);
       color: #fff;
       outline: none;
-      width: 100%;
     }
     .input::placeholder { color: #cfcfcf; }
-
-    .cta-button {
-      padding: 0.9rem 1.2rem;
-      border: none;
-      border-radius: 12px;
-      background: linear-gradient(135deg, #ff9a00, #ffb347);
-      color: #000;
-      font-weight: bold;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .cta-button:hover {
-      background: linear-gradient(135deg, #ffb347, #ffcc70);
-    }
-
-    .help {
-      font-size: 0.85rem;
-      opacity: 0.8;
-      margin-top: -0.3rem;
-    }
-
+    .help { font-size: 0.9rem; opacity: 0.85; margin-top: -0.25rem; }
     .error {
       margin-top: 0.75rem;
       background: rgba(255, 69, 58, 0.15);
@@ -129,37 +42,38 @@
       border-radius: 12px;
       display: none;
     }
-
-    /* Tabs */
     .tabs {
       display: flex;
       gap: 0.5rem;
       margin-bottom: 1rem;
+      flex-wrap: wrap;
       justify-content: center;
     }
     .tab-btn {
-      background: rgba(255,255,255,0.1);
-      border: 1px solid rgba(255,255,255,0.2);
+      background: rgba(255,255,255,0.08);
+      border: 1px solid rgba(255,255,255,0.15);
       border-radius: 999px;
-      padding: 0.5rem 1.2rem;
+      padding: 0.6rem 1rem;
       cursor: pointer;
       color: #fff;
-      transition: 0.3s;
     }
     .tab-btn.active {
       background: orange;
       color: #000;
-      font-weight: bold;
     }
     .tab-panel { display: none; }
     .tab-panel.active { display: block; }
-
-    .hidden { display: none !important; }
+    .muted {
+      opacity: 0.9;
+      margin-top: 0.25rem;
+      font-size: 0.95rem;
+      text-align: center;
+    }
+    h1, h2, p { text-align: center; }
   </style>
 </head>
 <body>
 
-  <!-- Navbar -->
   <nav class="glass-nav">
     <div class="logo">Essien's Excellence Academy</div>
     <ul class="nav-links">
@@ -171,15 +85,14 @@
     </ul>
   </nav>
 
-  <!-- Page -->
   <main class="page-section">
     <h1>Student Life & Portal</h1>
-    <p class="muted">Access learning tools, track progress, and stay connected with your school community.</p>
+    <p class="muted">Access your learning tools, track progress, and stay connected with your school community.</p>
 
     <div class="steps-wrap">
 
-      <!-- Step 1 -->
-      <section id="step1" class="step-card">
+      <!-- STEP 1 -->
+      <section id="step1" class="liquid-glass step-card">
         <h2>Student Portal</h2>
         <ul>
           <li>📚 Download Course Materials</li>
@@ -188,8 +101,8 @@
         </ul>
       </section>
 
-      <!-- Step 2 -->
-      <section id="step2" class="step-card">
+      <!-- STEP 2 -->
+      <section id="step2" class="liquid-glass step-card">
         <h2>Verify Your Student Status</h2>
         <form id="verificationForm" class="form-grid" novalidate>
           <label><strong>School Email</strong></label>
@@ -202,8 +115,8 @@
         </form>
       </section>
 
-      <!-- Step 3 -->
-      <section id="step3" class="step-card hidden">
+      <!-- STEP 3 -->
+      <section id="step3" class="liquid-glass step-card hidden">
         <h2>Access Your Account</h2>
         <div class="tabs">
           <button class="tab-btn active" data-tab="signup">Sign Up</button>
@@ -231,8 +144,8 @@
         </div>
       </section>
 
-      <!-- Step 4 -->
-      <section id="step4" class="step-card hidden">
+      <!-- STEP 4 -->
+      <section id="step4" class="liquid-glass step-card hidden">
         <h2>Customize Your Profile</h2>
         <form id="customForm" class="form-grid">
           <label>Full Name</label>
@@ -269,7 +182,7 @@
     const STUDENT_EMAIL_DOMAIN = "@essienacademy.edu.ng";
     const DEMO_PASSPHRASE = "demo";
 
-    // 🔑 Replace with your Supabase project details
+    // 🔑 replace these with your own Supabase project values
     const supabaseUrl = "https://YOUR_PROJECT_URL.supabase.co";
     const supabaseAnonKey = "YOUR_ANON_KEY";
     const supabase = supabase.createClient(supabaseUrl, supabaseAnonKey);
@@ -280,7 +193,6 @@
     const step3 = document.getElementById('step3');
     const step4 = document.getElementById('step4');
 
-    // Verification step
     verificationForm.addEventListener('submit', (e) => {
       e.preventDefault();
       const email = document.getElementById('school-email').value.toLowerCase();
@@ -317,7 +229,10 @@
       if (pw !== pw2) return alert("Passwords do not match.");
 
       const { error } = await supabase.auth.signUp({ email, password: pw });
-      if (error) return alert("Error signing up: " + error.message);
+      if (error) {
+        alert("Error signing up: " + error.message);
+        return;
+      }
 
       step3.classList.add('hidden');
       step4.classList.remove('hidden');
@@ -330,19 +245,28 @@
       const pw = document.getElementById('login-password').value;
 
       const { error } = await supabase.auth.signInWithPassword({ email, password: pw });
-      if (error) return alert("Login failed: " + error.message);
+      if (error) {
+        alert("Login failed: " + error.message);
+        return;
+      }
 
       step3.classList.add('hidden');
       step4.classList.remove('hidden');
     });
 
-    // Save Profile
+    // Save Profile to Supabase
     async function saveProfile({ firstName, lastName, gender, studentClass }) {
       const { data: { user } } = await supabase.auth.getUser();
       if (!user) return alert("Not logged in!");
 
       const { error } = await supabase.from("students").insert([
-        { user_id: user.id, first_name: firstName, last_name: lastName, gender, class: studentClass }
+        {
+          user_id: user.id,
+          first_name: firstName,
+          last_name: lastName,
+          gender,
+          class: studentClass
+        }
       ]);
 
       if (error) {
